# keyquestions

./: LICENSE  README.md  manage.py  pyproject.toml
keyquestions/: asgi.py  settings.py  urls.py  views.py  wsgi.py
keyquestions/templates/: base.html  home.html
questions/: models.py  views.py
questions/migrations/: 0001_initial.py
static/css/: base.css
