[tool.poetry]
name = "keyquestions"
version = "0.1.0"
description = "A conversation questions app built on Django"
authors = ["Andrew Chong <opheron@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Django = "3.1"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
